# GridZero

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/encoder/: flat.yaml  graph.yaml
configs/policy/: qwen3_0_6b.yaml  qwen3_4b.yaml
configs/reward/: default.yaml
configs/training/: gspo.yaml
gridzero/: __init__.py
gridzero/encoder/: __init__.py  base.py  embedding_pack.py  flat_encoder.py  graph_encoder.py  obs_normalization.py
gridzero/inference/: __init__.py  constrained_gen.py  vllm_client.py
gridzero/policy/: __init__.py  logprob.py  model.py  tokenizer_utils.py
gridzero/rewards/: __init__.py  grid_rewards.py  orm_plugin.py
gridzero/training/: __init__.py  buffer.py  embed_prompt.py  embedding_trainer.py  env.py  gspo.py  reward.py  rollout.py
scripts/: evaluate.py  prove_learning.sh  run_experiment.sh  serve_vllm.sh  smoke_embedding.py  train.py  train_embeds.py  validate_learning.py
tests/: test_actions.py  test_actions_grid2op_integration.py  test_embed_prompt.py  test_embedding_integration.py  test_encoder.py  test_env.py  test_grid_env.py  test_gspo.py  test_inference_params.py  test_rollout_context.py  test_trl_config.py  test_trl_integration.py  test_trl_reward.py  test_vllm_schema_live.py
