[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridzero"
version = "0.1.0"
description = "Transformer + GSPO for autonomous power grid control via grid2op"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grid2op>=1.10",
    "lightsim2grid",
    "torch>=2.3",
    "transformers>=5.2",
    "trl>=0.29",
    "vllm>=0.12",
    "pydantic>=2.0",
    "numpy",
    "gymnasium",
    "hydra-core>=1.3",
    "omegaconf",
    "torch-geometric",
    "aiohttp",
    "tqdm",
    "jmespath",
    "outlines>=1.0",
    "peft",
    "wandb>=0.18",
    "pytest",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["gridzero"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
    "smoke: end-to-end smoke tests that require external dependencies and GPU",
    "vllm_live: integration tests that call a live vLLM server",
]
